welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:29: error: not found: value range
range();
^Methods:30: error: not found: value range
range();
^Methods:31: error: not found: value range
range();
^Methods:32: error: not found: value range
range();
^Methods:33: error: not found: value range
range();
^