welcome.lessons.welcome.methods.basics.Methods.scala.code
 def goAndGet() {
 	var nbPas:Int=0;
  if(estSurBiscuit==false){
  	avance();
  	nbPas = nbPas + 1;
  }
  
  prendBiscuit();
  
  do{
  	recule();
  	nbPas = nbPas - 1 ;
  }while(nbPas!=0)
  
  poseBiscuit;
  
}



def ranger() {
	goAndGet();
	droite();
	avance();
	gauche()
}

range();
range();
range();
range();
range();
droite();
avance();
gauche();
droite();droite();
for (k<- 1 to 7){
	avance();
}
droite();
